<resources>
    <string name="app_name">WebsocketProjectTest</string>
    <string name="name_format_with_percent">%s(%s%%)</string>
    <string name="image_name_prefix">JPEG_%s_</string>
    <string name="attach_file_bottom_sheet_camera">Камера</string>
    <string name="attach_file_bottom_sheet_gallery">Фотогалерея</string>
    <string name="attach_file_bottom_sheet_document">Документ</string>
    <string name="actively_sell">Actively sell</string>
    <string name="sell">Sell</string>
    <string name="neutral">Neutral</string>
    <string name="buy">Buy</string>
    <string name="actively_buy">Actively buy</string>
    <string name="risk_level_low">Low</string>
    <string name="risk_level_medium">Medium</string>
    <string name="risk_level_high">High</string>
    <string name="support_attach">Прикрепить файл %d/12</string>
    <string name="support_attach_file_span">Прикрепить файл</string>
    <string name="support_format">Формат файлов: .jpg, .png, .pdf до 10 мб</string>
    <string name="support_files_file_format">pdf</string>
    <string name="support_file_too_large_msg">File is too large!</string>
    <string name="support_storage_access_msg">Allow permission for storage access!</string>
    <string name="support_title">Support center</string>
    <string name="support_category_of_appeal_title">Category of appeal</string>
    <string name="support_category_of_appeal_hint">Select a category</string>
    <string name="support_category_of_appeal_error">No category selected</string>
    <string name="support_subject_of_appeal_title">Subject of the appeal</string>
    <string name="support_subject_of_appeal_hint">Enter a subject</string>
    <string name="support_subject_of_appeal_error">No topic entered</string>
    <string name="support_subject_of_appeal_max_symbols">%d/50</string>
    <string name="support_text_of_appeal_title">The text of the appeal</string>
    <string name="support_text_of_appeal_hint">Enter the text</string>
    <string name="support_text_of_appeal_error">No text entered</string>
    <string name="support_text_of_appeal_max_symbols">%d/1000</string>
    <string name="support_delete_all_btn">Delete All</string>
    <string name="support_send_btn">Send</string>
    <string name="support_dialog_delete_all_files">Do you really want\nto delete all the files?</string>
    <string name="support_dialog_delete_text">Do you really want\nto delete the text?</string>
    <string name="support_dialog_delete_file">Do you really want\nto delete the file?\n\n%s, %s</string>
    <string name="support_appeal_category_title">Choosing a category</string>
    <string name="support_appeal_category_fiat_withdrawal">Fiat Withdrawal</string>
    <string name="support_appeal_category_deposit_in_cryptocurrency">Deposit in cryptocurrency</string>
    <string name="support_appeal_category_fiat_deposit">Fiat deposit</string>
    <string name="support_appeal_category_withdrawal_in_cryptocurrency">Withdrawal in cryptocurrency</string>
    <string name="support_appeal_category_trade_problem">Trade Problem</string>
    <string name="support_appeal_category_trade_issue">Trade issue</string>
    <string name="support_appeal_category_reset_2fa">Reset 2FA</string>
    <string name="support_appeal_category_change_email">Change e-mail</string>
    <string name="support_appeal_category_proof_of_identity">Proof of identity</string>
    <string name="support_appeal_category_technical_issue">Technical issue</string>
    <string name="support_appeal_category_closing_an_account">Closing an account</string>
    <string name="support_appeal_category_other">Other</string>
    <string name="main_portfolio">Portfolio</string>
    <string name="main_coin">Coin</string>
    <string name="main_price">Price</string>
    <string name="main_balance">Balance</string>
    <string name="main_actions">Actions</string>
    <string name="main_header_total_balance">Total balance</string>
    <string name="main_header_profit">Profit 24h</string>
    <string name="main_complete_verification_title">Complete\nVerification</string>
    <string name="main_action_buy">Buy</string>
    <string name="main_action_deposit">Deposit</string>
    <string name="main_action_sell">Sell</string>
    <string name="main_action_withdraw">Withdraw</string>
    <string name="main_price_format_with_currency">%s $</string>
    <string name="crypto_aave">AAVE</string>
    <string name="crypto_ada">ADA</string>
    <string name="crypto_avax">AVAX</string>
    <string name="crypto_bch">BCH</string>
    <string name="crypto_bnb">BNB</string>
    <string name="crypto_btc">BTC</string>
    <string name="crypto_dot">DOT</string>
    <string name="crypto_eos">EOS</string>
    <string name="crypto_eth">ETH</string>
    <string name="crypto_link">Link</string>
    <string name="crypto_ltc">LTC</string>
    <string name="crypto_luna">Luna</string>
    <string name="crypto_mana">MANA</string>
    <string name="crypto_matik">Matik</string>
    <string name="crypto_shib">SHIB</string>
    <string name="crypto_sol">Sol</string>
    <string name="crypto_trx">TRX</string>
    <string name="crypto_uni">UNI</string>
    <string name="crypto_usdt">USDT</string>
    <string name="crypto_xlm">XLM</string>
    <string name="crypto_xrp">XRP</string>
    <string name="crypto_zec">ZEC</string>
    <string name="fiat_code_ars">ARS</string>
    <string name="fiat_code_byn">BYN</string>
    <string name="fiat_code_clp">CLP</string>
    <string name="fiat_code_cop">COP</string>
    <string name="fiat_code_eur">EUR</string>
    <string name="fiat_code_idr">IDR</string>
    <string name="fiat_code_inr">INR</string>
    <string name="fiat_code_kzt">KZT</string>
    <string name="fiat_code_mxn">MXN</string>
    <string name="fiat_code_myr">MYR</string>
    <string name="fiat_code_pen">PEN</string>
    <string name="fiat_code_php">PHP</string>
    <string name="fiat_code_rub">RUB</string>
    <string name="fiat_code_thb">THB</string>
    <string name="fiat_code_uah">UAH</string>
    <string name="fiat_code_usd">USD</string>
    <string name="fiat_code_vef">VEF</string>
    <string name="fiat_code_vnd">VND</string>
    <string name="fiat_name_ars">Argentine Peso</string>
    <string name="fiat_name_byn">Belarusian Rouble</string>
    <string name="fiat_name_clp">Chilean Peso</string>
    <string name="fiat_name_cop">Colombian Peso</string>
    <string name="fiat_name_eur">European Euro</string>
    <string name="fiat_name_idr">Indonesian Rupiah</string>
    <string name="fiat_name_inr">Indian Rupee</string>
    <string name="fiat_name_kzt">Kazakhstani Tenge</string>
    <string name="fiat_name_mxn">Mexican Peso</string>
    <string name="fiat_name_myr">Malaysian Ringgit</string>
    <string name="fiat_name_pen">Peruvian New Sol</string>
    <string name="fiat_name_php">Philippine Peso</string>
    <string name="fiat_name_rub">Russian Rouble</string>
    <string name="fiat_name_thb">Thai Baht</string>
    <string name="fiat_name_uah">Ukrainian Hryvnia</string>
    <string name="fiat_name_usd">United States Dollar</string>
    <string name="fiat_name_vef">Venezuelan Bolivar</string>
    <string name="fiat_name_vnd">Vietnamese Dong</string>
    <string name="transaction_history_title">Transaction history</string>
    <string name="transaction_history_folder_all">All</string>
    <string name="transaction_history_folder_deposit">Deposit</string>
    <string name="transaction_history_folder_withdrawal">Withdrawal</string>
    <string name="transaction_history_folder_buy">Buy</string>
    <string name="transaction_history_folder_sell">Sell</string>
    <string name="transaction_history_column_coin">Coin</string>
    <string name="transaction_history_column_date_time">Date/Time</string>
    <string name="transaction_history_column_type_status">Type/Status</string>
    <string name="transaction_history_column_amount_fee">Amount/Fee</string>
    <string name="transaction_status_closed">Closed</string>
    <string name="transaction_history_type_sell">Sell</string>
    <string name="transaction_history_type_withdrawal">Withdrawal</string>
    <string name="transaction_history_type_buy">Buy</string>
    <string name="transaction_history_type_deposit">Deposit</string>
    <string name="transaction_history_empty">@string/common_empty</string>
    <string name="wallet_action_deposit">Deposit</string>
    <string name="wallet_action_buy">Buy</string>
    <string name="wallet_action_withdraw">Withdraw</string>
    <string name="wallet_action_sell">Sell</string>
    <string name="wallet_transaction_history">Transaction history</string>
    <string name="wallet_balance_title">Balance</string>
    <string name="wallet_wallet_title">Wallet</string>
    <string name="wallet_total">Total, USDT</string>
    <string name="wallet_available">Available, USDT</string>
    <string name="wallet_trading_account_title">Trading Account</string>
    <string name="wallet_positions">Positions</string>
    <string name="wallet_position_history">Position history</string>
    <string name="wallet_coin">Coin</string>
    <string name="wallet_positions_side">Side</string>
    <string name="wallet_positions_total_ex_profit">Total Ex/Profit</string>
    <string name="wallet_position_history_profit_side">Profit/Side</string>
    <string name="wallet_position_name_leverage">%s %s</string>
    <string name="position_history_detail_position_id">Position ID</string>
    <string name="position_history_detail_side">Side</string>
    <string name="position_history_detail_status">Status</string>
    <string name="position_history_detail_opening_date">Opening Date</string>
    <string name="position_history_detail_opening_time">Opening Time</string>
    <string name="position_history_detail_average_sell_price">Average Sell Price</string>
    <string name="position_history_detail_amount_sell_crypto">Amount (%s)</string>
    <string name="position_history_detail_amount_sell_usdt">Amount (USDT)</string>
    <string name="position_history_detail_closing_date">Closing Date</string>
    <string name="position_history_detail_closingTime">Closing Time</string>
    <string name="position_history_detail_average_buy_price">Average Buy Price</string>
    <string name="position_history_detail_amount_buy_crypto">Amount (%s)</string>
    <string name="position_history_detail_amount_buy_usdt">Amount (USDT)</string>
    <string name="position_history_detail_profit">Profit</string>
    <string name="position_history_detail_fee">Fee</string>
    <string name="transaction_history_detail_date">Date</string>
    <string name="transaction_history_detail_time">Time</string>
    <string name="transaction_history_detail_amount">Amount (USDT)</string>
    <string name="transaction_history_detail_fee">Fee (USDT)</string>
    <string name="transaction_history_detail_type">Type</string>
    <string name="transaction_history_detail_status">Status</string>
    <string name="transaction_history_detail_address">Address</string>
    <string name="transaction_history_detail_tx_hash">TxHash</string>
    <string name="transaction_history_detail_transaction_id">Transaction ID</string>
    <string name="transaction_history_detail_copied">%s copied</string>
    <string name="close_position_title">Do you really want\nto close the position?</string>
    <string name="close_position_close">Close</string>
    <string name="close_position_cancel">Cancel</string>
    <string name="withdraw_title">Withdraw</string>
    <string name="withdraw_network_title">Network</string>
    <string name="buy_partners_title">Choose Partners</string>
    <string name="buy_partners_partners_title">Partners</string>
    <string name="buy_partners_price_title">Price</string>
    <string name="buy_partners_you_receive_title">You receive</string>
    <string name="buy_identity_confirmation_title">To purchase\nmore than 150 USD, you need\nto confirm your identity</string>
    <string name="common_ok">OK</string>
    <string name="common_cancel">Cancel</string>
</resources>