<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sellPartnersTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/buy_partners_title" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/itemSellPartnersTitleVertical07Guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />

        <TextView
            android:id="@+id/sellPartnersPartnersTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:textColor="@color/white_opacity_30"
            android:textSize="@dimen/font_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sellPartnersTitle"
            tools:text="@string/buy_partners_partners_title" />

        <TextView
            android:id="@+id/sellPartnersPriceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_small"
            android:textColor="@color/white_opacity_30"
            android:textSize="@dimen/font_small"
            app:layout_constraintEnd_toStartOf="@+id/itemSellPartnersTitleVertical07Guideline"
            app:layout_constraintTop_toBottomOf="@+id/sellPartnersTitle"
            tools:text="@string/buy_partners_price_title" />

        <TextView
            android:id="@+id/sellPartnersYouReceiveTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:textColor="@color/white_opacity_30"
            android:textSize="@dimen/font_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sellPartnersTitle"
            tools:text="@string/buy_partners_you_receive_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>